# RAFAEL

./: .gitignore  CHANGELOG.md  Dockerfile  MANIFEST.in  README.md  build.py  pyproject.toml  requirements-dev.txt  requirements.txt
benchmarks/gwas/: compare.py  gwas.py
benchmarks/pca/: compare.py  pca.py  svd.py
benchmarks/surv/: cox.py  km.py
configs/: dataloader.yml  demo_qclinear_client.yml  demo_qclinear_client2.yml  demo_qclinear_server.yml  pipeline_gwas_qclinear.yml  pipeline_gwas_qclogistic.yml  pipeline_gwas_qcpca.yml  pipeline_gwas_rnapca.yml
data/client1/: GSE62564-1.csv  hapmap1_100_1.PHENO1.glm.linear  hapmap1_100_1.bim  hapmap1_100_1.cov  hapmap1_100_1.fam  hapmap1_100_1_quant.pheno  ind_list  snp_list
data/client2/: GSE62564-2.csv  hapmap1_100_2.cov  hapmap1_100_2.fam
data/client3/: GSE62564-3.csv
data/whole/: hapmap1_100.bim  hapmap1_100.cov  hapmap1_100.fam  hapmap1_100.pheno  hapmap1_100.prune.in  hapmap1_100.single.prune.in  hapmap1_100_quant.pheno  rafael.cox.stats.summary.csv
data/whole/glm/: hapmap1_100.PHENO1.glm.linear  hapmap1_100.pheno.glm.logistic.hybrid
data/whole/pca/: hapmap1_100.G.eigenvec  hapmap1_100.H.eigenvec  hapmap1_100.bed  hapmap1_100.bim  hapmap1_100.eigenval  hapmap1_100.fam  sample_list  snp_list
data/whole/qc/: hapmap1_100.afreq  hapmap1_100.bed  hapmap1_100.bim  hapmap1_100.fam  hapmap1_100.hardy  hapmap1_100.het  hapmap1_100.smiss  hapmap1_100.vmiss
docs/: Makefile
docs/source/: conf.py  index.rst  modules.rst  rafael.data_repository.rst  rafael.fedalgo.gwasprs.rst  rafael.fedalgo.rst  rafael.fedalgo.survival.rst  rafael.fedalgo.test.rst  rafael.network.rst  rafael.privacy.hyfed.rst  rafael.privacy.hyfed.test.rst  rafael.privacy.rst  rafael.rst  test.rst
examples/http/: client.py  run.sh  server.py  trigger.py
pipelines/: config.yml  install.sh  qclinear.py  rafael-pipeline.yml  run.sh
rafael/: authentication.py  configurations.py  controller.py  dataloader.py  datamodel.py  logger.py  pipelines.py  service.py  usecases.py  utils.py
rafael/data_repository/: __init__.py  repository.py
rafael/fedalgo/examples/: pvalue_precision.ipynb
rafael/fedalgo/gwasprs/: __init__.py  aggregations.py  array.py  block.py  gwasdata.py  gwasplot.py  hwe.py  iterator.py  ld.py  linalg.py  mask.py  project.py  qc.py  reader.py  regression.py  setup.py  stats.py  utils.py
rafael/fedalgo/survival/: __init__.py  block.py  cox.py
rafael/fedalgo/test/: test_aggregations.py  test_array.py  test_block.py  test_gwasdata.py  test_gwasplot.py  test_iterator.py  test_ld.py  test_linalg.py  test_qc.py  test_reader.py  test_regression.py  test_stats.py
rafael/network/: __init__.py  base.py  http.py  websocket.py
rafael/privacy/hyfed/: __init__.py  asynchttp.py  datamodel.py  rand.py  role.py
rafael/privacy/hyfed/test/: test_rand.py
services/: demo.py  service.py  trigger.py
services/configs/: README.md
services/log/: README.md
services/results/: README.md
test/: test_authentication.py  test_gwas.py  test_kaplan_meier.py  test_network.py  test_pipeline.py  test_regression.py  test_repository.py  utils.py
